fix default header spacing

--- a/app/assets/stylesheets/ado-landing-pages.css
+++ b/app/assets/stylesheets/ado-landing-pages.css
@@ -28,7 +28,7 @@
 }
 
 .ado-landing-pages .section {
-  padding: 60px 0 30px 0;
+  padding: 20px 0 30px 0;
 }
 
 .ado-landing-pages .dark-header #header {
